Add copyright / attribution language to all files.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* Copyright Panopto 2009 - 2011 / With contributions from Spenser Jones (sjones@ambrose.edu) */
+
 #configPage
 {
     text-align: center;
